# Rust-small-project-

./: .gitignore  Cargo.toml  README.md  app.db
backend/: app.db
backend/migrations/: 0001_init.sql
backend/src/: main.rs
backend/src/auth/: mod.rs
backend/src/config/: mod.rs
backend/src/db/: mod.rs
backend/src/middleware/: auth_extractor.rs
backend/src/signaling/: ws.rs
frontend/: .env.local.example  next.config.ts  package-lock.json  package.json  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/login/: page.tsx
frontend/app/register/: page.tsx
frontend/app/room/[id]/: page.tsx
frontend/components/: Navbar.tsx
frontend/services/: api.ts
frontend/store/: auth.ts
frontend/types/: api.ts
node js/: .gitignore
node js/WEB_RTC/: README.md
node js/WEB_RTC/backend/: package-lock.json
node js/WEB_RTC/backend/data/: meetclone.db
node js/WEB_RTC/backend/src/: db.js  server.js  websocket.js
node js/WEB_RTC/backend/src/middleware/: auth.js
node js/WEB_RTC/backend/src/routes/: auth.js  rooms.js
node js/WEB_RTC/frontend/: tailwind.config.js
node js/backend/: package.json
node js/frontend/: next.config.js  package-lock.json  package.json
node js/frontend/src/app/: globals.css
node js/frontend/src/components/: VideoTile.js
node js/frontend/src/lib/: api.js
src/chat/: mod.rs
src/models/: mod.rs
src/rooms/: mod.rs
src/routes/: auth.rs  chat.rs  health.rs  mod.rs  rooms.rs
src/signaling/: ws.rs
src/utils/: mod.rs
src/webrtc/: mod.rs
(+12 files in other folders)
